@@ -1,9 +1,5 @@
 #include "bin.h"
 
-/*
- return number of chars c in buffer b of length len
- */
-
 unsigned long bin_count(register const char *b, register unsigned long len,
                         register int c)
 {
